fixes #72 : Align "select" in "Parcours" div

--- a/src/Innova/LearningPathBundle/Resources/public/css/style.css
+++ b/src/Innova/LearningPathBundle/Resources/public/css/style.css
@@ -171,9 +171,7 @@ display: block;
 
 #header_test_bob{
 	margin-top: 15px;
-	margin-left: 50px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
+	
 }
 
 .otherss{
